@@ -358,6 +358,7 @@ extern AVFilter ff_vf_scale_qsv;
 extern AVFilter ff_vf_scale_vaapi;
 extern AVFilter ff_vf_scale_vulkan;
 extern AVFilter ff_vf_scale2ref;
+extern AVFilter ff_vf_scdet;
 extern AVFilter ff_vf_scroll;
 extern AVFilter ff_vf_select;
 extern AVFilter ff_vf_selectivecolor;
